--- a/cloud-consumer-order80/src/main/resources/application.yml
+++ b/cloud-consumer-order80/src/main/resources/application.yml
@@ -13,3 +13,9 @@ eureka:
 spring:
   application:
     name: cloud-consumer-order
+  zipkin:
+    base-url: http://localhost:9411
+    sleuth:
+      sample:
+        # 采样率值介于0 到 1 之间，1代表全部采样 会耗时一点
+        probability: 1
